# azure-edge-extensions-aio-dataflows-graph

./: .gitignore  LICENSE  README.md  makefile
.devcontainer/: devcontainer.json  postCreateCommand.sh
deploy/: acr-push.sh  create-role-assignment.sh  dataflow-graph.yaml  deploy-aio.sh  graph-simple.yaml
rust/filter/: Cargo.toml
rust/filter/.cargo/: config.toml
rust/filter/src/: lib.rs
